crates/marain-core/tests/fixtures/errors/12_type_pascal_case.lat
functio f(^x: sermo) :
    dic "x".
